...
                        feedback.show()
                    }, label: {
                        Label(L10n.Shared.Button.Feedback.label, systemSymbol: .megaphone)
                    })
                    .accessibilityLabel(L10n.Shared.Button.Feedback.Accessibility.label)
                    .accessibilityHint(L10n.Shared.Button.Feedback.Accessibility.hint)
                    .accessibilityIdentifier("link-lists.feedback.button")
                }
                if !pinnedLists.isEmpty || !unpinnedLists.isEmpty {
                    ToolbarItem(placement: .navigationBarTrailing) {
                        EditButton()
                    }
                }
...
                        label: {
                            Label(L10n.LinkLists.CreateList.title, systemSymbol: .folderBadgePlus)
                        }
                    )
                    .accessibilityLabel(L10n.LinkLists.CreateList.Accessibility.label)
                    .accessibilityHint(L10n.LinkLists.CreateList.Accessibility.hint)
                    .accessibilityIdentifier("link-lists.create-list.button")
                }
            }
        }, elseModify: { view in
            view.toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button(action: {
...
