...
                            .accessibilityHint(L10n.LinkDetail.MoreMenu.Accessibility.hint)
                    }
                }
                .ifUnavailable(.iOS26) { menu in
                    menu.tint(.white)
                }
                .accessibilityIdentifier("link-detail.more-menu.button")
            }
            ToolbarItemGroup(placement: .topBarLeading) {
                Button(action: {
                    feedback.show()
                }, label: {
                    Label(L10n.Shared.Button.Feedback.label, systemSymbol: .megaphone)
                })
                .accessibilityLabel(L10n.Shared.Button.Feedback.Accessibility.label)
                .accessibilityHint(L10n.Shared.Button.Feedback.Accessibility.hint)
                .accessibilityIdentifier("link-detail.feedback.button")
            }
            if #available(iOS 26, *) {
                ToolbarItem(placement: .confirmationAction) {
                    Button(role: .confirm) {
                        dismiss()
                    } label: {
...
