...
        .padding()
        .toolbar {
            ToolbarItem(placement: .topBarLeading) {
                Button(role: .cancel) {
                    dismiss()
                } label: {
                    Text("Done")
                }
            }
            ToolbarItemGroup(placement: .topBarTrailing) {
                Button(action: {
                    editAction()
                }) {
...
